--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
         <div class="image">
           <img src="images/first.png" alt="ED, Mortgage Loan Officer in Buffalo">
         </div>
-        <p class="review">"Citizen Bank is in a growth mode. We are planning to be around for the long term and we are
+        
+        <p class="review">
+          <img src="images/double-quotes.png" alt="Quote Icon" class="quote-icon">
+          "Citizen Bank is in a growth mode. We are planning to be around for the long term and we are
           proving that by growing sales."</p>
         <p class="author">- ED,Mortagge Loan</p>
         <p class="author">Officer in Buffalo</p>
@@ -105,7 +108,9 @@
         <div class="image">
           <img src="images/second.png" alt="Mark, Senior Mortgage Loan Officer in Chicago">
         </div>
-        <p class="review">"The senior management is very committed to the mortgage lending business on every level-from
+        <p class="review">
+          <img src="images/double-quotes.png" alt="Quote Icon" class="quote-icon">
+          "The senior management is very committed to the mortgage lending business on every level-from
           the top, down. We're all going in the same direction and that's what I like. So, if I have a question or idea,
           I
           can get answers. They listen and we get thing done. They are really investing to grow the mortgage business."
@@ -118,7 +123,9 @@
         <div class="image">
           <img src="images/third.png" alt="John, Mortgage Loan Officer in Charleston">
         </div>
-        <p class="review">"It is so great to be part of an organization that is the looking for solution and creativity
+        <p class="review">
+          <img src="images/double-quotes.png" alt="Quote Icon" class="quote-icon">
+          "It is so great to be part of an organization that is the looking for solution and creativity
           versus creating barrier that cause problems."</p>
         <p class="author">- John, Mortgage Loan</p>
         <p class="author">Officer in Charleston</p>
